--- a/src/templates/l-header-global.html
+++ b/src/templates/l-header-global.html
@@ -1,4 +1,4 @@
-<header class="l-header fixed w-full">
+<header class="l-header fixed bg-fixed w-full">
     <div class="container flex justify-between h-full items-center">
         <div>
             <a href="#" class="logo"><img src="/img/logo.png" alt="logo"></a>
