--- a/src/scss/layouts/_l-header.scss
+++ b/src/scss/layouts/_l-header.scss
@@ -1,9 +1,10 @@
 .l-header {
-    height: 80px;
+    /*height: 80px;*/
     background: url(../img/header-bg.png) no-repeat center center;
     background-size: cover;
+    z-index: 1;
 }
-.nav {
+/*.nav {
  &__menu {
   &-item {
 
@@ -12,4 +13,4 @@
  &-link {
     
  }
-}
+}*/
