--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
  ----------------------------------------------------- */
 // Components
 @import "components/_buttons";
+@import "components/icons";
 
 // Layouts
 @import "layouts/_l-header";
