--- a/src/scss/layouts/_l-inner.scss
+++ b/src/scss/layouts/_l-inner.scss
@@ -16,23 +16,50 @@
     }
 }
 .about, .services, .advantages {
-    padding: 135px 0;
+    @media screen and (min-width: 600px) {
+        padding: 60px 0;
+        }
+    @media screen and (min-width: 1024px) {
+        padding: 90px 0;
+    }
+        padding: 135px 0;
 }
 .gallery {
-    padding: 65px 0;
+    @media screen and (min-width: 600px) {
+        padding: 30px 0;
+    }//media sm
+    @media screen and (min-width:1024px) {
+        padding: 50px 0;
+    }//media md
+        padding: 65px 0;
 }
 .contact {
     background: url(../img/contact-bg.png) no-repeat center center;
     background-size: cover;
     padding: 70px 0;
-
     &--wrap {
-        max-width: 1100px;
-        padding: 90px 0;
-        border-radius: 5px;
-        box-shadow: 1px 1.7px 12px 0 rgba(0, 0, 0, 0.12), 1.5px 2.6px 9px 0 rgba(0, 0, 0, 0.23);
-    }
+        @media screen and (min-width: 600px) {
+                max-width: 90%;
+                padding: 40px 0; 
+            } //media sm
+        @media screen and (min-width: 1024px) {
+                max-width: 90%; 
+            } //media md
+                max-width: 1100px;
+                padding: 90px 0;
+                border-radius: 5px;
+                box-shadow: 1px 1.7px 12px 0 rgba(0, 0, 0, 0.12), 1.5px 2.6px 9px 0 rgba(0, 0, 0, 0.23);
+        }
+
+        
     &--form {
-        max-width: 350px;
-    }
+        @media screen and (min-width:600px) {
+                max-width: 100%;
+                padding-right: 20px;
+            }//media sm
+        @media screen and (min-width:1024px) {
+                max-width: 350px;
+                padding-right: 20px;
+            }//media md
+        }
 }
