--- a/src/templates/l-header-global.html
+++ b/src/templates/l-header-global.html
@@ -1,29 +1,29 @@
-<header class="l-header fixed bg-fixed w-full">
+<header class="l-header w-full fixed bg-fixed text-right sm: h-10 sm: px-8 sm: py-12 md:h-20 md:px-6 md:py-0">
     <div class="container flex justify-between h-full items-center">
-        <div>
+        <div class="sm: w-1/12 md:w-2/12">
             <a href="#" class="logo"><img src="/img/logo.png" alt="logo"></a>
         </div>
-        <div>
+        <div class="sm: w-11/12 md:w-10/12">
             <nav class="nav inline-flex">
-                <ul class="nav__menu inline-flex text-white font-medium opacity-87">
-                    <li class="nav__menu-item mx-8"> 
+                <ul class="nav__menu inline-flex text-white font-medium opacity-87 sm: text-sm md:text-base">
+                    <li class="nav__menu-item sm: mx-2 md:mx-4 lg:mx-8"> 
                         <a href="#" class="nav-link">Головна</a>
                     </li>
-                    <li class="nav__menu-item mx-8"> 
+                    <li class="nav__menu-item sm: mx-2 md:mx-4 lg:mx-8"> 
                         <a href="#" class="nav-link">Про нас</a>
                     </li>
-                    <li class="nav__menu-item mx-8"> 
+                    <li class="nav__menu-item sm: mx-2 md:mx-4 lg:mx-8"> 
                         <a href="#" class="nav-link">Послуги</a>
                     </li>
-                    <li class="nav__menu-item mx-8"> 
+                    <li class="nav__menu-item sm: mx-2 md:mx-4 lg:mx-8"> 
                         <a href="#" class="nav-link">Клієнти</a>
                     </li>
-                    <li class="nav__menu-item mx-8"> 
+                    <li class="nav__menu-item sm: mx-2 md:mx-4 lg:mx-8"> 
                         <a href="#" class="nav-link">Контакти</a>
                     </li>
                 </ul>
                 </nav>
-            <button class="btn-main btn-main--shadow btn-main--primary bg-primary">Замовити</button>
+            <button class="btn-main btn-main--shadow btn-main--primary bg-primary py-2 px-2 sm:py-2 sm:px-4 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Замовити</button>
             </div>
             </div>
         </header>
