--- a/src/templates/l-header-global.html
+++ b/src/templates/l-header-global.html
@@ -4,7 +4,7 @@
             <a href="#" class="logo"><img src="/img/logo.png" alt="logo"></a>
         </div>
         <div class="sm: w-11/12 md:w-10/12">
-            <nav class="nav inline-flex">
+            <nav class="nav inline-flex justify-between">
                 <ul class="nav__menu inline-flex text-white font-medium opacity-87 sm: text-sm md:text-base">
                     <li class="nav__menu-item sm: mx-2 md:mx-4 lg:mx-8"> 
                         <a href="#" class="nav-link">Головна</a>
