--- a/src/scss/layouts/_l-inner.scss
+++ b/src/scss/layouts/_l-inner.scss
@@ -31,9 +31,18 @@
                 box-shadow: 1px 1.7px 12px 0 rgba(0, 0, 0, 0.12), 1.5px 2.6px 9px 0 rgba(0, 0, 0, 0.23);
             }
 }
+
+//ICONS
+.icon-text {
+    background: url(../img/account-icon.png) no-repeat 20px center #ececec;
+  }
+  .icon-mail {
+    background: url(../img/email-icon.png) no-repeat 20px center #ececec;
+  }
+
 //MEDIA QUERIES
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 375px) {
     .about, .services, .advantages {
         padding: 60px 0;
     }
@@ -47,11 +56,21 @@
         }
         &--form {
             max-width: 100%;
-            padding-right: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
             }
-            //SM media end
-                }
+        }
+            //XS media end
+@media screen and (min-width:600px) {
+    .contact {
+        &--form {
+            padding-right: 20px;
+        }
+    }
+}//SM media ena
+                
     @media screen and (min-width: 1024px) {
     .about, .services, .advantages {
         padding: 90px 0;
