--- a/src/templates/l-footer-global.html
+++ b/src/templates/l-footer-global.html
@@ -2,28 +2,28 @@
     <div class="container">
         <!--Nav-->
             <nav class="nav flex justify-center sm: mb-6 md:mb-8">
-                <ul class="nav__menu inline-flex opacity-87">
-                    <li class="nav__menu-item mx-6"><a class="nav-link" href="#">Головна</a></li>
-                    <li class="nav__menu-item mx-6"><a class="nav-link" href="#">Про нас</a></li>
-                    <li class="nav__menu-item mx-6"><a class="nav-link" href="#">Послуги</a></li>
-                    <li class="nav__menu-item mx-6"><a class="nav-link" href="#">Клієнти</a></li>
-                    <li class="nav__menu-item mx-6"><a class="nav-link" href="#">Контакти</a></li>
+                <ul class="nav__menu inline-flex opacity-87 sm: text-sm md:text-tiny lg:text-base">
+                    <li class="nav__menu-item xs: mx-2 md:mx-6 lg:mx-8"><a class="nav-link" href="#">Головна</a></li>
+                    <li class="nav__menu-item xs: mx-2 md:mx-6 lg:mx-8"><a class="nav-link" href="#">Про нас</a></li>
+                    <li class="nav__menu-item xs: mx-2 md:mx-6 lg:mx-8"><a class="nav-link" href="#">Послуги</a></li>
+                    <li class="nav__menu-item xs: mx-2 md:mx-6 lg:mx-8"><a class="nav-link" href="#">Клієнти</a></li>
+                    <li class="nav__menu-item xs: mx-2 md:mx-6 lg:mx-8"><a class="nav-link" href="#">Контакти</a></li>
                 </ul>
             </nav>
             <!--Social Links & Newsletter form-->
             <div class="flex sm: flex-col md:flex-row sm: w-full md:w-auto h-full items-center sm: mr-8 sm: mb-6 md:mr-14 md:mb-10">
-                <div class="inline-flex justify-center sm: mb-6 md:mb-0">
-                    <a href="#" class="pt-1 pr-1"><img src="./img/linkedin-icon.png" alt="LinkedIn"></a>
-                    <a href="#" class="pt-1 pr-1"><img src="./img/pinterest-icon.png" alt="Pinterest"></a>
-                    <a href="#" class="pt-1 pr-1"><img src="./img/facebook-icon.png" alt="Facebook"></a>
-                    <a href="#" class="pt-1 pr-1"><img src="./img/instagram-icon.png" alt="Instagram"></a>
-                    <a href="#" class="pt-1 pr-1"><img src="./img/youtube-icon.png" alt="YouTube"></a>
-                    <a href="#" class="pt-1"><img src="./img/twitter-icon.png" alt="Twitter"></a>
+                <div class="social inline-flex justify-center sm: mb-6 md:mb-0">
+                    <a href="#" class="social--link"><img src="./img/linkedin.png" alt="LinkedIn"></a>
+                    <a href="#" class="social--link"><img src="./img/pinterest.png" alt="Pinterest"></a>
+                    <a href="#" class="social--link"><img src="./img/facebook.png" alt="Facebook"></a>
+                    <a href="#" class="social--link"><img src="./img/instagram.png" alt="Instagram"></a>
+                    <a href="#" class="social--link"><img src="./img/youtube.png" alt="YouTube"></a>
+                    <a href="#" class="social--link"><img src="./img/twitter.png" alt="Twitter"></a>
                 </div>
                 <div class="inline-flex justify-center h-full md:ml-12 lg:ml-12 sm: mb-0 md: mb-1">
-                    <form action="#" class="flex newsletter--form relative">
-                        <input type="text" class="w-full newsletter--input bg-second-gray icon-mail focus:outline-0 focus:shadow-outline border rounded-full pl-12" placeholder="Підпишіться на наші новини">
-                        <button class="btn-main--send btn-main btn-main--shadow bg-primary-green rounded-r-full absolute top-0 right-0" type="submit"></button>
+                    <form action="#" class="flex newsletter--form">
+                        <input type="text" class="w-full newsletter--input bg-second-gray icon-mail rounded-tr-none rounded-br-none border rounded-full pl-12 pr-2" placeholder="Підпишіться на наші новини">
+                        <button class="btn-main--send btn-main btn-main--shadow bg-primary-green rounded-r-full" type="submit"></button>
                     </form>
                 </div>
             </div>
